- clean: remoção de código morto, depreciado e leves refatorações